--- a/App/css/user_profile.css
+++ b/App/css/user_profile.css
@@ -1,131 +1,4 @@
-/*
 
-.hist {
-    float:left;
-    width:25%;
-    height:280px;
-}
-.alleg{
-    float:left;
-    width:50%;
-    height:280px;
-}
-.meds{
-    float:right;
-    width:25%;
-    height:280px;
-}
-
-#user-hist li, #user-allerg li, #user-meds li {
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease-in-out;
-    list-style: none;
-}
-
-#user-hist li:hover, #user-allerg li:hover, #user-meds li:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-
-.name{
-    color: black;
-}
-
-#user-hist{
-  height: 50vh; 
-  overflow: scroll;
-}
-body {
-  background-color: #f1f1f1;
-  font-family: Arial, Helvetica, sans-serif;
-}*/
-
-.hist {
-    float: left;
-    width: 100%;
-    max-width: 25%;
-    height: auto;
-    padding-right: 25px;
-    background-color: transparent;
-    border: solid;
-    border-color: black;
-    border-radius: 5px;
-    
-}
-.hist h2{
-text-align: center;
-}
-.alleg {
-    float: left;
-    width: 100%;
-    max-width: 25%;
-    height: auto;
-    padding-right: 25px;
-    background-color: transparent;
-    border: solid;
-    border-color: black;
-    border-radius: 5px;
-}
-
-.alleg h2 {
-    text-align: center;
-}
-
-.meds {
-    float: left;
-    width: 100%;
-    max-width: 25%;
-
-    background-color: transparent;
-    border: solid;
-    border-color: black;
-    border-radius: 5px;
-
-}
-
-.meds h2{
-    text-align: center;
-}
-
-.Profile{
-
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 10px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 30px;
-
-  align-content: center;
-}
-
-
-
-#user-hist li,
-#user-allerg li,
-#user-meds li {
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease-in-out;
-    list-style: none;
-    margin-bottom: 10px;
-    font-size: 16px;
-    font-weight: 400;
-}
-
-#user-hist li:hover,
-#user-allerg li:hover,
-#user-meds li:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
 
 .name {
     color: #333;
@@ -134,50 +7,100 @@ text-align: center;
     margin-bottom: 20px;
 }
 
-#user-hist {
-    max-height: 50vh;
-    overflow-y: scroll;
-    scrollbar-width: thin;
+
+.card {
+  margin-bottom: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
-#user-meds{
-    max-height: 50vh;
-    overflow-y: scroll;
-    scrollbar-color: red;
+.card-header {
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #dee2e6;
 }
 
-#user-allerg{
-    max-height: 50vh;
-    overflow-y: scroll;
-    scrollbar-color: red;
+.card-body {
+  padding: 1rem;
 }
 
+.overflow-scroll {
+  max-height: 210px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+@media (max-width: 576px) {
+  .card-body {
+    padding: 0.5rem;
+  }
+  
+  .card-header {
+    font-size: 5px;
+  }
+}
 
 @media (max-width: 768px) {
-    .hist {
-        max-width: 100%;
-        padding-right: 0;
-    }
-
-    .alleg {
-        max-width: 100%;
-        padding-right: 0;
-    }
-
-    .meds {
-        max-width: 100%;
-        padding-right: 0;
-    }
-
-    #user-hist,
-    #user-allerg,
-    #user-meds {
-        margin-bottom: 40px;
-    }
-
-    .name {
-        font-size: 24px;
-        margin-bottom: 40px;
-    }
+  .card-body {
+    font-size: 10px;
+    padding: 10px;
+    margin: 0;
+  }
 }
 
+@media (max-width: 400px) {
+  .card {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .card-header h2 {
+    font-size: 0.7rem;
+  }
+
+  .card-body {
+    padding: 5px;
+  }
+
+  .list-group-item {
+    font-size: 0.6rem;
+    padding: 3px;
+  }
+}
+
+/*@media (max-width: 980px) {
+  .card {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .card-header h2 {
+    font-size: 1.0rem;
+  }
+
+  .card-body {
+    padding: 5px;
+  }
+
+  .list-group-item {
+    font-size: 0.6rem;
+    padding: 3px;
+  }
+}*/
+
+#style-7::-webkit-scrollbar-track
+{
+  visibility: hidden;
+
+}
+
+#style-7::-webkit-scrollbar
+{
+  visibility: hidden;
+
+}
+#style-7::-webkit-scrollbar-thumb
+{
+
+  visibility: hidden;
+
+}
